--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,17 +9,17 @@
       <a class="main-header__logo">
         <img class="main-header__logo-image" src="#" alt="Логотип сайта Седона.">
       </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
+      <nav class="main-navigation">
+        <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+        <div class="main-navigation__wrapper">
+          <ul class="main-navigation__list site-list">
             <li class="site-list__item">
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="main-navigation__link main-navigation__link--current" href="">Фото и видео</a>
+              <span class="main-navigation__link main-navigation__link-current">Фото и видео</span>
             </li>
             <li class="site-list__item">
               <a class="main-navigation__link" href="form.html">Форма отзыва</a>
@@ -31,10 +31,10 @@
         </div>
       </nav>
     </header>
-    <main class="page-body__main-container">
+    <main class="main-container">
       <h1 class="visually-hidden">Галлерея</h1>
-      <section class="intro-container__logo">
-        <img class="intro__logo" src="#" width="229" height="39" alt="Добро пожаловать в Седону">
+      <section class="main-container__logo">
+        <img class="main-container__logo-intro" src="#" width="320" height="165" alt="Добро пожаловать в Седону">
       </section>
       <section class="gallery">
         <div class="gallery__wrapper">
@@ -44,50 +44,50 @@
         <ul class="gallery__list">
           <li class="gallery__item">
             <a class="gallery__link" href="#">
-              <img class="gallery__image" src=" " width="280" height="280" alt="Рассвет с видом на горы.">
+              <img class="gallery__image" src="img/catalog/popular-spaces-mobile.jpg" width="280" height="280" alt="Рассвет с видом на горы.">
             </a>
-            <div class="gallery--item__description">
-              <p class="gallery-title">Народные просторы</p>
-              <p class="gallery-author">Автор фото: Борис</p>
-              <p class="gallery--likes__number">1358</p>
+            <div class="gallery__item-description">
+              <p class="gallery__title">Народные просторы</p>
+              <p class="gallery__author">Автор фото: Борис</p>
+              <p class="gallery__likes-number">1358</p>
             </div>
           </li>
           <li class="gallery__item">
             <a class="gallery__link" href="#">
-              <img class="gallery__image" src=" " width="280" height="280" alt="Колючие растения Седоны.">
+              <img class="gallery__image" src="img/catalog/local-vegetation-mobile.jpg" width="280" height="280" alt="Колючие растения Седоны.">
             </a>
-            <div class="gallery--item__description">
-              <p class="gallery-title">Местная растительность</p>
-              <p class="gallery-author">Автор фото: Сергей</p>
-              <p class="gallery--likes__number">143</p>
+            <div class="gallery__item-description">
+              <p class="gallery__title">Местная растительность</p>
+              <p class="gallery__author">Автор фото: Сергей</p>
+              <p class="gallery__likes-number">143</p>
             </div>
           </li>
           <li class="gallery__item">
             <a class="gallery__link" href="#">
-              <img class="gallery__image" src=" " width="280" height="280" alt="Горная дорога.">
+              <img class="gallery__image" src="img/catalog/road-to-the-north-mobile.jpg" width="280" height="280" alt="Горная дорога.">
             </a>
-            <div class="gallery--item__description">
-              <p class="gallery-title">Дорога на север</p>
-              <p class="gallery-author">Автор фото: Петр</p>
-              <p class="gallery--likes__number">96</p>
+            <div class="gallery__item-description">
+              <p class="gallery__title">Дорога на север</p>
+              <p class="gallery__author">Автор фото: Петр</p>
+              <p class="gallery__likes-number">96</p>
             </div>
           </li>
           <li class="gallery__item">
             <a class="gallery__link" href="#">
-              <img class="gallery__image" src=" " width="280" height="280" alt="Опасный горный перешеек.">
+              <img class="gallery__image" src="img/catalog/devil's-bridge-desktop.jpg" width="280" height="280" alt="Опасный горный перешеек.">
             </a>
-            <div class="gallery--item__description">
-              <p class="gallery-title">Мост Дьявола</p>
-              <p class="gallery-author">Автор фото: Антон</p>
-              <p class="gallery--likes__number">254</p>
+            <div class="gallery__item-description">
+              <p class="gallery__title">Мост Дьявола</p>
+              <p class="gallery__author">Автор фото: Антон</p>
+              <p class="gallery__likes-number">254</p>
             </div>
           </li>
-          <li class="gallery__item gallery__item--video">
-            <div class="video__item">
+          <li class="gallery__item gallery__video">
+            <div class="gallery__video-item">
               <h2 class="gallery__headline">Все еще сомневаетесь?</h2>
               <p class="gallery__intro">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
             </div>
-            <img class="gallery__image" src=" " width="280" height="280" alt="Видео">
+            <img class="gallery__image" src="img/catalog/video-mobile.jpg.jpg" width="280" height="280" alt="Видео">
           </li>
         </ul>
       </section>
@@ -95,29 +95,29 @@
     <footer class="main-footer">
       <div class="main-footer__wrapper">
         <div class="main-footer__hashtag">
-          <b class="hashtag__academy">#Visitsedona</b>
+          <b class="main-footer__academy">#Visitsedona</b>
         </div>
         <div class="main-footer__socials">
-          <ul class="socials__list">
-            <li class="socials__item">
-              <a class="socials__link" href="https://vk.com/htmlacademy">
+          <ul class="main-footer__socials-list">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
               </a>
             </li>
-            <li class="socials__item">
-              <a class="socials__link" href="https://t.me/htmlacademy">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграм.</span>
               </a>
             </li>
-            <li class="socials__item">
-              <a class="socials__link" href="https://youtube.com/user/htmlacademy">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://youtube.com/user/htmlacademy">
                 <span class="visually-hidden">Ютуб.</span>
               </a>
             </li>
           </ul>
         </div>
         <div class="main-footer__developed">
-          <a class="html__developed" href="https://htmlacademy.ru">
+          <a class="main-footer__developed-html" href="https://htmlacademy.ru">
             <span class="visually-hidden">HTML Academy.</span>
           </a>
         </div>
