--- a/source/index.html
+++ b/source/index.html
@@ -16,13 +16,13 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="site-list__link site-list__link--current">Главная</a>
+              <span class="site-list__link site-list__link-current">Главная</span>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="form.html">>Форма отзыва</a>
+              <a class="site-list__link" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="https://htmlacademy.ru">HTML Academy</a>
@@ -31,35 +31,37 @@
         </div>
       </nav>
     </header>
-    <main class="page-body__main-container">
+    <main class="main-container">
       <h1 class="visually-hidden">Преимущества Седоны.</h1>
-      <section class="intro-container__logo">
-        <img class="intro__logo-text intro__logo" src="#" width="229" height="39" alt="Добро пожаловать в Седону.">
+      <section class="main-container__logo">
+        <img class="main-container__logo-intro" src="#" width="320" height="165" alt="Добро пожаловать в Седону">
       </section>
       <section class="advantages">
         <div class="advantages__wrapper">
           <h2 class="advantages__headline">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="advantages__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul  class="advantages__list">
-            <li class="advantages__item advantages__item--painted">
+            <li class="advantages__item advantages__item-painted">
               <h3 class="advantages__title">Настоящий городок</h3>
+              <img src="img/index/sedona-city@1x.jpg" alt="Вид на дома Седоны">
               <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </li>
-            <li class="advantages__item--home">
-              <h3 class="advantages__title--decorated">Жилье</h3>
-              <p class="advantages__description--decorated">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            <li class="advantages__item-home">
+              <h3 class="advantages__title-decorated">Жилье</h3>
+              <p class="advantages__description-decorated">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
-            <li class="advantages__item--food">
-              <h3 class="advantages__title--decorated">Еда</h3>
-              <p class="advantages__description--decorated">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <li class="advantages__item-food">
+              <h3 class="advantages__title-decorated">Еда</h3>
+              <p class="advantages__description-decorated">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="advantages__item--present">
-              <h3 class="advantages__title--decorated">Сувениры</h3>
-              <p class="advantages-description--decorated">Не только китайского, но и местного производства!</p>
+            <li class="advantages__item-present">
+              <h3 class="advantages__title-decorated">Сувениры</h3>
+              <p class="advantages-description-decorated">Не только китайского, но и местного производства!</p>
             </li>
-            <li class="advantages__item advantages__item--painted">
+            <li class="advantages__item advantages__item-painted">
               <h3 class="advantages__title">Там есть мост дьявола</h3>
               <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <img src="img/index/devil's-bridge-desktop.jpg" alt="Вид на Мост Дьявола">
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Небольшая площадь</h3>
@@ -78,43 +80,46 @@
       </section>
       <section class="hotel-search">
         <div class="hotel-search__wrapper">
-          <h2 class="hotel-search--title">Заинтересовались?</h2>
-          <p class="hotel-search--description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="hotel-search--button button" href="#">Поиск гостиницы в Седоне</a>
+          <h2 class="hotel-search-title">Заинтересовались?</h2>
+          <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="hotel-search-button button" href="#">Поиск гостиницы в Седоне</a>
         </div>
       </section>
       <section class="map">
         <div class="map__wrapper">
           <h2 class="visually-hidden">Место расположения Седоны на карте.</h2>
+          <span class="map__sedona-place">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13567342884!2d-111.83024369269376!3d34.85444379064761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1669661029007!5m2!1sru!2sru" width="320" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </span>
         </div>
       </section>
     </main>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
         <div class="main-footer__hashtag">
-          <b class="hashtag__academy">#Visitsedona</b>
+          <b class="main-footer__academy">#Visitsedona</b>
         </div>
         <div class="main-footer__socials">
-          <ul class="socials__list">
-            <li class="socials__item">
-              <a class="socials__link" href="https://vk.com/htmlacademy">
+          <ul class="main-footer__socials-list">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
               </a>
             </li>
-            <li class="socials__item">
-              <a class="socials__link" href="https://t.me/htmlacademy">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграм.</span>
               </a>
             </li>
-            <li class="socials__item">
-              <a class="socials__link" href="https://youtube.com/user/htmlacademy">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://youtube.com/user/htmlacademy">
                 <span class="visually-hidden">Ютуб.</span>
               </a>
             </li>
           </ul>
         </div>
         <div class="main-footer__developed">
-          <a class="html__developed" href="https://htmlacademy.ru">
+          <a class="main-footer__developed-html" href="https://htmlacademy.ru">
             <span class="visually-hidden">HTML Academy.</span>
           </a>
         </div>
