:heavy_check_mark: Сборка #3

--- a/3/form.html
+++ b/3/form.html
@@ -23,7 +23,7 @@
               <a class="site-list__link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link site-list__link--current" href="form.html">Форма отзыва</a>
+              <span class="site-list__link site-list__link-current">Форма отзыва</span>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="https://htmlacademy.ru">HTML Academy</a>
@@ -32,99 +32,99 @@
         </div>
       </nav>
     </header>
-    <main class="page-body__main-container">
+    <main class="main-container">
       <h1 class="visually-hidden">Форма для отправки отзыва.</h1>
-      <section class="intro-container__logo">
-        <img class="intro__logo" src="#" width="229" height="39" alt="Добро пожаловать в Седону.">
+      <section class="main-container__logo">
+        <img class="main-container__logo-intro" src="#" width="320" height="165" alt="Добро пожаловать в Седону">
       </section>
       <section class="review">
         <div class="review__wrapper">
           <h2 class="review__headline">Оставьте свой отзыв</h2>
           <p class="review__intro">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных выми достопримечательностях</p>
           <form class="review__form" action="https://echo.htmlacademy.ru" method="post">
-            <fieldset class="review__title">
-              <legend class="form__fieldset">Представьтесь:</legend>
-              <ul class="form__user-name">
-                <li class="user-name__data">
-                  <label for="shown-name" class="form__label">Имя<sup>*</sup>:</label>
-                  <input class="form__name" type="text" id="shown-name" name="user__name" placeholder="Введите имя" value="Пётр" required>
+            <fieldset class="review__fieldset">
+              <legend class="review__title">Представьтесь:</legend>
+              <ul class="review__form-user-name">
+                <li class="review__form-user-name-data">
+                  <label for="shown-name" class="review__form-label">Имя<sup>*</sup>:</label>
+                  <input class="review__form-name" type="text" id="shown-name" name="user__name" placeholder="Введите имя" value="Пётр" required>
                 </li>
-                <li class="user-name__data">
-                  <label for="shown-second-name" class="form__label">Фамилия<sup>*</sup>:</label>
-                  <input class="form__name" type="text" id="shown-second-name" name="user__name" placeholder="Введите фамилию" value="Иванов" required>
+                <li class="review__form-user-name-data">
+                  <label for="shown-second-name" class="review__form-label">Фамилия<sup>*</sup>:</label>
+                  <input class="review__form-name" type="text" id="shown-second-name" name="user__name" placeholder="Введите фамилию" value="Иванов" required>
                 </li>
-                <li class="user-name__data">
-                  <label for="shown-patronymic" class="form__label">Отчество:</label>
-                  <input class="form__name" type="text" id="shown-patronymic" name="user__name" placeholder="Введите отчество" value="Викторович">
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="review__title">
-              <legend class="form__fieldset">Контактная информация:</legend>
-              <ul class="form__user-contact">
-                <li class="user-contact__data">
-                  <label for="shown-phone" class="form__label">Контактный телефон<sup>*</sup>:</label>
-                  <input class="form__phone" type="text" id="shown-phone" name="user__phone" placeholder="Введите телефон" required>
-                  <span class="form__image--phone">Телефон.</span>
-                </li>
-                <li class="user-contact__data">
-                  <label for="shown-mail" class="form__label">Электронная почта<sup>*</sup>:</label>
-                  <input class="form__phone" type="email" id="shown-mail" name="user__mail" placeholder="Введите e-mail" required>
-                  <span class="form__image--mail">E-mail.</span>
+                <li class="review__form-user-name-data">
+                  <label for="shown-patronymic" class="review__form-label">Отчество:</label>
+                  <input class="review__form-name" type="text" id="shown-patronymic" name="user__name" placeholder="Введите отчество" value="Викторович">
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="review__title">
-              <legend class="form__fieldset">Ваше общее впечатление:</legend>
-              <ul class="form__user-impression">
-                <li class="user-impression__data">
+            <fieldset class="review__fieldset">
+              <legend class="review__title">Контактная информация:</legend>
+              <ul class="review__user-contact">
+                <li class="review__user-contact-data">
+                  <label for="shown-phone" class="review__form-label">Контактный телефон<sup>*</sup>:</label>
+                  <input class="review__form-input" type="text" id="shown-phone" name="user__phone" placeholder="Введите телефон" required>
+                  <span class="review__image-phone">Телефон.</span>
+                </li>
+                <li class="review__user-contact-data">
+                  <label for="shown-mail" class="review__form-label">Электронная почта<sup>*</sup>:</label>
+                  <input class="review__form-input" type="email" id="shown-mail" name="user__mail" placeholder="Введите e-mail" required>
+                  <span class="review__image-mail">E-mail.</span>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="review__fieldset">
+              <legend class="review__title">Ваше общее впечатление:</legend>
+              <ul class="review__form-user-impression">
+                <li class="review__user-impression-data">
                   <label class="user-impression">
-                    <input class="visually-hidden impression-input__radio" type="radio" name="impression-type" value="positive" id="positive-review" checked>
+                    <input class="visually-hidden impression-input" type="radio" name="impression-type" value="positive" id="positive-review" checked>
                     <span class="impression-mark-radio"></span>
                     <span class="impression-label">Скорее положительное</span>
                   </label>
                 </li>
-                <li class="user-impression__data">
+                <li class="review__user-impression-data">
                   <label class="user-impression">
-                    <input class="visually-hidden impression-input__radio" type="radio" name="impression-type" value="negative" id="negative-review">
+                    <input class="visually-hidden impression-input" type="radio" name="impression-type" value="negative" id="negative-review">
                     <span class="impression-mark-radio"></span>
                     <span class="impression-label">Скорее отрицательное</span>
                   </label>
                 </li>
-                <li class="user-impression__data">
+                <li class="review__user-impression-data">
                   <label class="user-impression">
-                    <input class="visually-hidden impression-input__radio" type="radio" name="impression-type" value="neutral" id="neutral-review">
+                    <input class="visually-hidden impression-input" type="radio" name="impression-type" value="neutral" id="neutral-review">
                     <span class="impression-mark-radio"></span>
                     <span class="impression-label">Затрудняюсь ответить</span>
                   </label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="review__title">
-              <legend class="form__fieldset">Посещенные достопримечательности:</legend>
-              <ul class="form__user-places">
-                <li class="user-places__data">
+            <fieldset class="review__fieldset">
+              <legend class="review__title">Посещенные достопримечательности:</legend>
+              <ul class="review__form-user-places">
+                <li class="review__user-places-data">
                   <label class="user-places">
                     <input class="visually-hidden places-input" type="checkbox" name="place" value="devils-bridge" id="devils-bridge" checked>
                     <span class="places-mark"></span>
                     <span class="places-label">Мост Дьявола</span>
                   </label>
                 </li>
-                <li class="user-places__data">
+                <li class="review__user-places-data">
                   <label class="user-places">
                     <input class="visually-hidden places-input" type="checkbox" name="place" value="mountain-bell" id="mountain-bell" checked>
                     <span class="places-mark"></span>
                     <span class="places-label">Гора-Колокол</span>
                   </label>
                 </li>
-                <li class="user-places__data">
+                <li class="review__user-places-data">
                   <label class="user-places">
                     <input class="visually-hidden places-input" type="checkbox" name="place" value="slide-park" id="slide-park" checked>
                     <span class="places-mark"></span>
                     <span class="places-label">Слайд-парк</span>
                   </label>
                 </li>
-                <li class="user-places__data">
+                <li class="review__user-places-data">
                   <label class="user-places">
                     <input class="visually-hidden places-input" type="checkbox" name="place-rock" value="red-rock" id="red-rock">
                     <span class="places-mark"></span>
@@ -133,50 +133,48 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="review__title">
-              <legend class="form__fieldset">Опишите свои эмоции:</legend>
+            <fieldset class="review__fieldset">
+              <legend class="review__title">Опишите свои эмоции:</legend>
                 <label class="user-review">
                   <input class="visually-hidden review-input" type="text" name="user-review-text" placeholder="Опишите подробно все свои восторги">
                 </label>
             </fieldset>
-            <ul class="button-form button">
-              <li class="buttons-submit">
+            <button class="button-form button">
                 <input type="submit" class="submit-button" value="Оставить отзыв">
-              </li>
-            </ul>
+            </button>
+            <p class="review__form-legend">
+              <small>* — обязательные поля</small>
+            </p>
           </form>
-          <p class="stats__legend">
-            <small>* — обязательные поля</small>
-          </p>
         </div>
       </section>
     </main>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
         <div class="main-footer__hashtag">
-          <b class="hashtag__academy">#Visitsedona</b>
+          <b class="main-footer__academy">#Visitsedona</b>
         </div>
         <div class="main-footer__socials">
-          <ul class="socials__list">
-            <li class="socials__item">
-              <a class="socials__link" href="https://vk.com/htmlacademy">
+          <ul class="main-footer__socials-list">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
               </a>
             </li>
-            <li class="socials__item">
-              <a class="socials__link" href="https://t.me/htmlacademy">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграм.</span>
               </a>
             </li>
-            <li class="socials__item">
-              <a class="socials__link" href="https://youtube.com/user/htmlacademy">
+            <li class="main-footer__socials-item">
+              <a class="main-footer__socials-link" href="https://youtube.com/user/htmlacademy">
                 <span class="visually-hidden">Ютуб.</span>
               </a>
             </li>
           </ul>
         </div>
         <div class="main-footer__developed">
-          <a class="html__developed" href="https://htmlacademy.ru">
+          <a class="main-footer__developed-html" href="https://htmlacademy.ru">
             <span class="visually-hidden">HTML Academy.</span>
           </a>
         </div>
