--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,8 +6,8 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
-        <img class="main-header__logo-image" src="#" alt="Логотип сайта Седона.">
+      <a class="main-header__logo" href="index.html">
+        <img class="main-header__logo-image" src="img/index/logo.jpg" width="185" height="96" alt="Логотип сайта Седона.">
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -33,95 +33,91 @@
     </header>
     <main class="main-container">
       <h1 class="visually-hidden">Галлерея</h1>
-      <section class="main-container__logo">
-        <img class="main-container__logo-intro" src="#" width="320" height="165" alt="Добро пожаловать в Седону">
+      <section class="hero hero__background--small">
+        <div class="hero__background--small">
+          <img class="hero__logo" src="img/index/hero-background.jpg" width="320" height="158" alt="Добро пожаловать в Седону.">
+          <h2 class="hero__headline">Фото и видео</h2>
+          <p class="hero__intro">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        </div>
       </section>
       <section class="gallery">
         <div class="gallery__wrapper">
-          <h2 class="gallery__headline">Фото и видео</h2>
-          <p class="gallery__intro">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-        </div>
-        <ul class="gallery__list">
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/catalog/popular-spaces-mobile.jpg" width="280" height="280" alt="Рассвет с видом на горы.">
-            </a>
-            <div class="gallery__item-description">
-              <p class="gallery__title">Народные просторы</p>
-              <p class="gallery__author">Автор фото: Борис</p>
-              <p class="gallery__likes-number">1358</p>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/catalog/local-vegetation-mobile.jpg" width="280" height="280" alt="Колючие растения Седоны.">
-            </a>
-            <div class="gallery__item-description">
-              <p class="gallery__title">Местная растительность</p>
-              <p class="gallery__author">Автор фото: Сергей</p>
-              <p class="gallery__likes-number">143</p>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/catalog/road-to-the-north-mobile.jpg" width="280" height="280" alt="Горная дорога.">
-            </a>
-            <div class="gallery__item-description">
-              <p class="gallery__title">Дорога на север</p>
-              <p class="gallery__author">Автор фото: Петр</p>
-              <p class="gallery__likes-number">96</p>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/catalog/devil's-bridge-desktop.jpg" width="280" height="280" alt="Опасный горный перешеек.">
-            </a>
-            <div class="gallery__item-description">
-              <p class="gallery__title">Мост Дьявола</p>
-              <p class="gallery__author">Автор фото: Антон</p>
-              <p class="gallery__likes-number">254</p>
-            </div>
-          </li>
-          <li class="gallery__item gallery__video">
-            <div class="gallery__video-item">
-              <h2 class="gallery__headline">Все еще сомневаетесь?</h2>
-              <p class="gallery__intro">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-            </div>
-            <img class="gallery__image" src="img/catalog/video-mobile.jpg.jpg" width="280" height="280" alt="Видео">
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <div class="main-footer__wrapper">
-        <div class="main-footer__hashtag">
-          <b class="main-footer__academy">#Visitsedona</b>
-        </div>
-        <div class="main-footer__socials">
-          <ul class="main-footer__socials-list">
-            <li class="main-footer__socials-item">
-              <a class="main-footer__socials-link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Вконтакте.</span>
+          <ul class="gallery__list">
+            <li class="gallery__item">
+              <a class="gallery__link" href="#">
+                <img class="gallery__image" src="img/catalog/popular-spaces-mobile.jpg" width="280" height="280" alt="Рассвет с видом на горы.">
               </a>
+              <div class="gallery__item-description">
+                <p class="gallery__title">Народные просторы</p>
+                <p class="gallery__author">Автор фото: Борис</p>
+                <p class="gallery__likes-number">1358</p>
+              </div>
             </li>
-            <li class="main-footer__socials-item">
-              <a class="main-footer__socials-link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Телеграм.</span>
+            <li class="gallery__item">
+              <a class="gallery__link" href="#">
+                <img class="gallery__image" src="img/catalog/local-vegetation-mobile.jpg" width="280" height="280" alt="Колючие растения Седоны.">
               </a>
+              <div class="gallery__item-description">
+                <p class="gallery__title">Местная растительность</p>
+                <p class="gallery__author">Автор фото: Сергей</p>
+                <p class="gallery__likes-number">143</p>
+              </div>
             </li>
-            <li class="main-footer__socials-item">
-              <a class="main-footer__socials-link" href="https://youtube.com/user/htmlacademy">
-                <span class="visually-hidden">Ютуб.</span>
+            <li class="gallery__item">
+              <a class="gallery__link" href="#">
+                <img class="gallery__image" src="img/catalog/road-to-the-north-mobile.jpg" width="280" height="280" alt="Горная дорога.">
               </a>
+              <div class="gallery__item-description">
+                <p class="gallery__title">Дорога на север</p>
+                <p class="gallery__author">Автор фото: Петр</p>
+                <p class="gallery__likes-number">96</p>
+              </div>
+            </li>
+            <li class="gallery__item">
+              <a class="gallery__link" href="#">
+                <img class="gallery__image" src="img/catalog/devils-bridge-desktop.jpg" width="280" height="280" alt="Опасный горный перешеек.">
+              </a>
+              <div class="gallery__item-description">
+                <p class="gallery__title">Мост Дьявола</p>
+                <p class="gallery__author">Автор фото: Антон</p>
+                <p class="gallery__likes-number">254</p>
+              </div>
+            </li>
+            <li class="gallery__item gallery__video">
+              <div class="gallery__video-item">
+                <h2 class="gallery__headline">Все еще сомневаетесь?</h2>
+                <p class="gallery__intro">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+              </div>
+              <img class="gallery__image" src="img/catalog/video-mobile.jpg.jpg" width="280" height="177" alt="Видео.">
             </li>
           </ul>
         </div>
-        <div class="main-footer__developed">
-          <a class="main-footer__developed-html" href="https://htmlacademy.ru">
-            <span class="visually-hidden">HTML Academy.</span>
-          </a>
-        </div>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <span class="main-footer__hashtag">#Visitsedona</span>
+      <div class="main-footer__socials social">
+        <ul class="socials-list">
+          <li class="socials-item">
+            <a class="socials-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте.</span>
+            </a>
+          </li>
+          <li class="socials-item">
+            <a class="socials-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм.</span>
+            </a>
+          </li>
+          <li class="socials-item">
+            <a class="socials-link" href="https://youtube.com/user/htmlacademy">
+              <span class="visually-hidden">Ютуб.</span>
+            </a>
+          </li>
+        </ul>
       </div>
+      <a class="main-footer__developed-html" href="https://htmlacademy.ru">
+        <span class="visually-hidden">HTML Academy.</span>
+      </a>
     </footer>
   </body>
 </html>
